--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -19,10 +19,8 @@ tap 'caskroom/homebrew-versions'
 # Install Casks
 cask 'dropbox'
 cask 'github'
-cask 'google-chrome'
 cask 'slack'
 cask 'coconutbattery'
-cask 'transmission'
+cask 'utorrent'
 cask 'the-unarchiver'
 cask 'vlc'
-cask 'disk-inventory-x'
